# AdventOfCode2019

./: .gitignore  CMakeLists.txt  README.md
descriptions/: Day01.md  Day02.md
include/: Solution.hpp
src/: Advent.cpp  CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp
support/: DownloadDay.py  post-commit
